# claude-code-lab

./: .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml
.claude/: chrome-mcp-template.md  chrome-network-inspection-report.md  settings.json  staying-current.md
.claude/agents/: backend-code-reviewer.md  backend-engineer.md  devops-engineer.md  frontend-code-reviewer.md  frontend-engineer.md  full-stack-engineer.md  (+2 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  executions.py  pipelines.py  providers.py  templates.py
backend/app/core/: config.py  database.py  security.py
backend/app/engine/: pipeline_executor.py  variable_substitution.py
backend/app/engine/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
backend/app/models/: __init__.py  execution.py  pipeline.py  template.py  user.py
backend/app/schemas/: execution.py  pipeline.py  template.py  user.py
backend/app/services/: auth_service.py  execution_service.py  pipeline_service.py  template_service.py
backend/tests/: conftest.py  test_auth.py  test_executions.py  test_health.py  test_pipelines.py  test_templates.py  test_variable_substitution.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  vite.config.ts
roadmap/: README.md  epic-iteration-loop.md  epic-organization-navigation.md  epic-user-authentication.md
(+54 files in other folders)
