[tool.poetry]
name = "llm-prompt-lab-backend"
version = "0.1.0"
description = "Backend for LLM Prompt Lab"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
httpx = "^0.28.0"
alembic = "^1.18.3"
psycopg2-binary = "^2.9.11"
anthropic = "^0.78.0"
openai = "^2.17.0"
PyJWT = "^2.9.0"
bcrypt = "^4.3.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
